--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,11 +9,11 @@
         <div class="col-md-6">
             <div class="well">
                 <h2 class="text-center">You Profile</h2>
-                <p>Visit the community to meet other developers, entreprenuers, and investors!</p>
                 <% if current_user.profile %>
                     <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
                     <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <%else %>
+                    <p>Create your profile so that you can share your information with the community</p>
                     <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block'  %>
                 <%end %>
             </div>
