Improved users index page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -21,3 +21,10 @@
     background-color:#CCFFFF;
     border-color:#CCFFFF;
 }
+.user-index-avatar {
+  border-radius: 50%;
+}
+
+.well.white-bg {
+  background-color: white;
+}
