--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,4 @@
+/* Users Profile Page Style*/
 .job_title_icon{
     display:inline-block;
     border-radius:2px;
@@ -21,6 +22,7 @@
     background-color:#CCFFFF;
     border-color:#CCFFFF;
 }
+/* Users Index Page Style*/
 .user-index-avatar {
   border-radius: 50%;
 }
